--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.bluechilli.flutteruploader">
+<manifest 
+  xmlns:android="http://schemas.android.com/apk/res/android" 
+  package="com.bluechilli.flutteruploader">
 </manifest>
