--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,8 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace "com.bluechilli.flutteruploader"
+    
     compileSdkVersion 31
 
     defaultConfig {
