--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,19 +4,19 @@ description: Demonstrates how to use the flutter_uploader plugin.
 publish_to: "none"
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   flutter:
     sdk: flutter
-  file_picker: ^4.3.3
-  path_provider: ^2.0.8
-  image_picker: ^0.8.4+6
-  shared_preferences: ^2.0.5
-  flutter_local_notifications: ^9.2.0
+  file_picker: ^9.0.0
+  path_provider: ^2.1.5
+  image_picker: ^1.1.2
+  shared_preferences: ^2.5.2
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^5.0.0
   integration_test:
     sdk: flutter
   flutter_test:
